--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.11.5",
+    "mongoose-paginate-v2": "^1.7.31",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
